risc0/zirgen/dsl/test/repro/bad_array_type_recovery.zir
// RUN: not zirgen %s 2>&1 | FileCheck %s
// CHECK: error:

component Foo(arr: Array<Bogus, 3>) {
  arr[1];
}

